# spore-nest-module

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  Makefile.am  README.md  annotated.html  circular__buffer_8h_source.html  circular_buffer.h  classIllegalConnection.html  classes.html  classspore_1_1CheckParameters-members.html  classspore_1_1CheckParameters.html  classspore_1_1CircularBuffer-members.html  classspore_1_1CircularBuffer.html  classspore_1_1CircularBuffer_1_1const__iterator-members.html  classspore_1_1CircularBuffer_1_1const__iterator.html  classspore_1_1ConnectionDataLogger-members.html  classspore_1_1ConnectionDataLogger.html  classspore_1_1ConnectionDataLoggerBase-members.html  classspore_1_1ConnectionDataLoggerBase.html  classspore_1_1ConnectionDataLoggerBase__inherit__graph.dot  classspore_1_1ConnectionDataLoggerBase__inherit__graph.map  classspore_1_1ConnectionDataLoggerBase__inherit__graph.md5  classspore_1_1ConnectionDataLogger__coll__graph.dot  classspore_1_1ConnectionDataLogger__coll__graph.map  classspore_1_1ConnectionDataLogger__coll__graph.md5  classspore_1_1ConnectionDataLogger__inherit__graph.dot  classspore_1_1ConnectionDataLogger__inherit__graph.map  classspore_1_1ConnectionDataLogger__inherit__graph.md5  classspore_1_1ConnectionUpdateManager-members.html  classspore_1_1ConnectionUpdateManager.html  classspore_1_1ConnectionUpdater-members.html  classspore_1_1ConnectionUpdater.html  classspore_1_1ConnectionUpdater__coll__graph.dot  classspore_1_1ConnectionUpdater__coll__graph.md5  classspore_1_1ConnectionUpdater__inherit__graph.dot  classspore_1_1ConnectionUpdater__inherit__graph.md5  classspore_1_1DiligentConnectorModel-members.html  classspore_1_1DiligentConnectorModel.html  (+294 more)
docs/: annotated.html  circular__buffer_8h_source.html  classes.html  classspore_1_1CircularBuffer-members.html  classspore_1_1CircularBuffer.html  classspore_1_1CircularBuffer_1_1const__iterator-members.html  classspore_1_1CircularBuffer_1_1const__iterator.html  classspore_1_1ConnectionDataLogger-members.html  classspore_1_1ConnectionDataLogger.html  classspore_1_1ConnectionDataLoggerBase-members.html  classspore_1_1ConnectionDataLoggerBase.html  classspore_1_1ConnectionDataLogger__coll__graph.map  classspore_1_1ConnectionDataLogger__inherit__graph.md5  classspore_1_1ConnectionUpdateManager-members.html  classspore_1_1ConnectionUpdateManager.html  classspore_1_1ConnectionUpdater-members.html  classspore_1_1ConnectionUpdater.html  classspore_1_1ConnectionUpdater__coll__graph.map  classspore_1_1DiligentConnectorModel-members.html  classspore_1_1DiligentConnectorModel.html  classspore_1_1DiligentConnectorModel__inherit__graph.md5  classspore_1_1PoissonDblExpNeuron-members.html  classspore_1_1PoissonDblExpNeuron.html  classspore_1_1PoissonDblExpNeuron__inherit__graph.map  classspore_1_1PoissonDblExpNeuron__inherit__graph.md5  classspore_1_1RewardInProxy-members.html  classspore_1_1RewardInProxy.html  classspore_1_1RewardInProxy__coll__graph.map  classspore_1_1RewardInProxy__coll__graph.md5  classspore_1_1RewardInProxy__inherit__graph.map  classspore_1_1RewardInProxy__inherit__graph.md5  classspore_1_1SporeModule-members.html  classspore_1_1SporeModule.html  classspore_1_1SporeTestBase-members.html  classspore_1_1SporeTestBase.html  classspore_1_1SporeTestConnection-members.html  classspore_1_1SporeTestConnection.html  classspore_1_1SporeTestConnectionCommonProperties-members.html  classspore_1_1SporeTestConnectionCommonProperties.html  classspore_1_1SporeTestConnectionCommonProperties__coll__graph.map  (+89 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  functions_4.js  functions_6.js  functions_9.js  functions_b.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_4.js
docs/template/: header.html
examples/center_out_showcase/: README.md
examples/center_out_showcase/python/: config.py  control_node.py  control_node_py3.py  interface.py  network_node.py  network_node_py3.py  run.music  run_py3.music  (+1 more)
examples/lever_press_showcase/: README.md
examples/pattern_matching_showcase/: README.md  experiment.py  experiment.sh  experiment.test.sh  run.music
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  search.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  circular_buffer.h  connection_data_logger.cpp  connection_data_logger.h  connection_updater.cpp  connection_updater.h  diligent_connector_model.h  param_utils.cpp  param_utils.h  poisson_dbl_exp_neuron.cpp  poisson_dbl_exp_neuron.h  reward_in_proxy.cpp  reward_in_proxy.h  spore.h  spore_names.cpp  spore_names.h  spore_test_base.h  spore_test_connection.h  spore_test_node.cpp  spore_test_node.h  sporemodule.cpp  sporemodule.h  synaptic_sampling_rewardgradient_connection.cpp  synaptic_sampling_rewardgradient_connection.h  test_circular_buffer.cpp  test_circular_buffer.h  test_pulse_trace.cpp  test_pulse_trace.h  test_tracing_node.cpp  test_tracing_node.h  tracing_node.cpp  tracing_node.h
src/sli/: sporemodule-init.sli
template/: header.html
unittests/: CMakeLists.txt  test_circular_buffer.py  test_connection.py  test_dbl_exp_neuron.py  test_dbl_exp_neuron_io.py  test_dbl_exp_neuron_rate.py  test_garbage_collector.py  test_music_integration.py  test_pattern_matching.py  test_reward_synapse.py  test_reward_synapse_io.py  test_reward_synapse_stdp.py  test_rewardgradient_connection.py  test_tracing_node.py
unittests/test_reward_in_proxy/: nest_receiver.py  nest_receiver_py3.py  test.music  test.py  test_py3.music  time_sender.py  time_sender_py3.py
utils/: init-docs.sh  run-style-check.sh  update-docs.sh
(+36 files in other folders)
